# nirs4all-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSING.md  LICENSING_FR.md  Makefile  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release-crates.yml  release-matlab.yml  release-npm.yml  release-python.yml  release-r.yml  release-source.yml  version-guard.yml
LICENSES/: COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSE_FR.md
bindings/matlab/: README.md
bindings/python/: README.md  pyproject.toml
bindings/python/src/n4a/: __init__.py
bindings/python/src/nirs4all_core/: __init__.py  _capabilities.py  _execution.py  _pipeline.py  _topology.py  _upstreams.py
bindings/python/src/nirs4all_lite/: __init__.py  _capabilities.py  _topology.py  _upstreams.py
bindings/python/tests/: test_capability_matrix.py  test_cross_language_surface.py  test_execution_parity.py  test_facade.py  test_pipeline_contract.py  test_release_topology.py  test_upstreams.py
bindings/r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  cran-comments.md
bindings/rust/: README.md
bindings/wasm/: README.md  package-lock.json  (+2 more)
compat/: capabilities.toml  upstreams.toml
docs/: ARCHITECTURE.md  BINDINGS.md  CAPABILITIES.md  COMPATIBILITY.md  CORE_RENAME.md  NAMING.md  OPERATORS.md  PARITY.md  PUBLISHING.md  RELEASE.md  conf.py  getting_started.md  index.md  installation.md
scripts/: bump_version.sh
tests/: test_consume_repository_descriptor.py  test_run_custom_app_host_env.py  test_run_multimodal_roundtrip_env.py  test_verify_cluster_handoff.py
(+60 files in other folders)
